# Sympa - SYsteme de Multi-Postage Automatique
# Copyright (c) 1997, 1998, 1999, 2000, 2001 Comite Reseau des Universites
# Copyright (c) 1997,1998, 1999 Institut Pasteur & Christophe Wolfhugel
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

nobase_default_DATA = \
	auth.conf \
	ca-bundle.crt \
	charset.conf \
	crawlers_detection.conf \
	create_list.conf \
	edit_list.conf \
	ldap_alias_entry.tt2 \
	ldap_alias_manager.conf \
	list_aliases.tt2 \
	mhonarc-ressources.tt2 \
	mime.types \
	nrcpt_by_domain.conf \
	sympa.wsdl \
	topics.conf \
	create_list_templates/confidential/comment.tt2 \
	create_list_templates/confidential/config.tt2 \
	create_list_templates/discussion_list/comment.tt2 \
	create_list_templates/discussion_list/config.tt2 \
	create_list_templates/hotline/comment.tt2 \
	create_list_templates/hotline/config.tt2 \
	create_list_templates/html-news-letter/comment.tt2 \
	create_list_templates/html-news-letter/config.tt2 \
	create_list_templates/intranet_list/comment.tt2 \
	create_list_templates/intranet_list/config.tt2 \
	create_list_templates/news-letter/comment.tt2 \
	create_list_templates/news-letter/config.tt2 \
	create_list_templates/private_working_group/comment.tt2 \
	create_list_templates/private_working_group/config.tt2 \
	create_list_templates/public_web_forum/comment.tt2 \
	create_list_templates/public_web_forum/config.tt2 \
	global_task_models/chk_cert_expiration.daily.task \
	global_task_models/crl_update.daily.task \
	global_task_models/eval_bouncers.daily.task \
	global_task_models/expire_bounce.daily.task \
	global_task_models/process_bouncers.weekly.task \
	global_task_models/purge_logs_table.daily.task \
	global_task_models/purge_one_time_ticket_table.daily.task \
	global_task_models/purge_orphan_bounces.monthly.task \
	global_task_models/purge_session_table.daily.task \
	global_task_models/purge_tables.daily.task \
	global_task_models/purge_user_table.monthly.task \
	list_task_models/expire.yearly.task \
	list_task_models/remind.2month.task \
	list_task_models/remind.monthly.task \
	list_task_models/remind.yearly.task \
	list_task_models/sync_include.ttl.task \
	scenari/access_web_archive.closed \
	scenari/access_web_archive.intranet \
	scenari/access_web_archive.listmaster \
	scenari/access_web_archive.owner \
	scenari/access_web_archive.private \
	scenari/access_web_archive.public \
	scenari/add.auth \
	scenari/add.closed \
	scenari/add.owner \
	scenari/add.owner_notify \
	scenari/automatic_list_creation.family_owner \
	scenari/automatic_list_creation.listmaster \
	scenari/automatic_list_creation.public \
	scenari/create_list.intranet \
	scenari/create_list.listmaster \
	scenari/create_list.public_listmaster \
	scenari/del.auth \
	scenari/del.closed \
	scenari/del.owner \
	scenari/del.owner_notify \
	scenari/d_edit.editor \
	scenari/d_edit.owner \
	scenari/d_edit.private \
	scenari/d_edit.private-https \
	scenari/d_edit.public \
	scenari/d_read.owner \
	scenari/d_read.private \
	scenari/d_read.private-https \
	scenari/d_read.public \
	scenari/global_remind.listmaster \
	scenari/info.conceal \
	scenari/info.open \
	scenari/info.private \
	scenari/invite.closed \
	scenari/invite.owner \
	scenari/invite.private \
	scenari/invite.public \
	scenari/remind.listmaster \
	scenari/remind.owner \
	scenari/review.closed \
	scenari/review.intranet \
	scenari/review.listmaster \
	scenari/review.owner \
	scenari/review.private \
	scenari/review.public \
	scenari/send.closed \
	scenari/send.confidential \
	scenari/send.editorkey \
	scenari/send.editorkeyonly \
	scenari/send.editorkeyonlyauth \
	scenari/send.intranet \
	scenari/send.intranetorprivate \
	scenari/send.newsletter \
	scenari/send.newsletterkeyonly \
	scenari/send.private \
	scenari/send.privateandeditorkey \
	scenari/send.privateandnomultipartoreditorkey \
	scenari/send.privatekey \
	scenari/send.privatekeyandeditorkeyonly \
	scenari/send.privateoreditorkey \
	scenari/send.privateorpublickey \
	scenari/send.private_smime \
	scenari/send.public \
	scenari/send.publickey \
	scenari/send.publicnoattachment \
	scenari/send.publicnomultipart \
	scenari/send.public_nobcc \
	scenari/spam_status.x-spam-status \
	scenari/subscribe.auth \
	scenari/subscribe.auth_notify \
	scenari/subscribe.auth_owner \
	scenari/subscribe.closed \
	scenari/subscribe.intranet \
	scenari/subscribe.intranetorowner \
	scenari/subscribe.open \
	scenari/subscribe.open_notify \
	scenari/subscribe.open_quiet \
	scenari/subscribe.owner \
	scenari/subscribe.smime \
	scenari/subscribe.smimeorowner \
	scenari/topics_visibility.conceal \
	scenari/topics_visibility.identified \
	scenari/topics_visibility.noconceal \
	scenari/tracking.owner \
	scenari/tracking.private \
	scenari/unsubscribe.auth \
	scenari/unsubscribe.auth_notify \
	scenari/unsubscribe.closed \
	scenari/unsubscribe.open \
	scenari/unsubscribe.open_notify \
	scenari/unsubscribe.owner \
	scenari/visibility.conceal \
	scenari/visibility.intranet \
	scenari/visibility.noconceal \
	scenari/visibility.secret

# TODO: # merge with previous list # once installation directory (web_tt2)
# matches archive directory (templates/web)
nobase_webtemplate_DATA = \
	templates/web/active_lists.tt2 \
	templates/web/add_request.tt2 \
	templates/web/admin_menu.tt2 \
	templates/web/admin.tt2 \
	templates/web/ajax.tt2 \
	templates/web/arc_manage.tt2 \
	templates/web/arc_protect.tt2 \
	templates/web/arcsearch_form.tt2 \
	templates/web/arcsearch.tt2 \
	templates/web/arc.tt2 \
	templates/web/auto_signoff.tt2 \
	templates/web/automatic_lists_management_request.tt2 \
	templates/web/automatic_lists_request.tt2 \
	templates/web/automatic_lists.tt2 \
	templates/web/blacklist.tt2 \
	templates/web/button_footer.tt2 \
	templates/web/button_header.tt2 \
	templates/web/ca.tt2 \
	templates/web/change_email.tt2 \
	templates/web/change_email_request.tt2 \
	templates/web/choosepasswd.tt2 \
	templates/web/close_list.tt2 \
	templates/web/compose_mail.tt2 \
	templates/web/copy_template.tt2 \
	templates/web/crash.tt2 \
	templates/web/create_list_request.tt2 \
	templates/web/create_list.tt2 \
	templates/web/css.tt2 \
	templates/web/css_ie.tt2 \
	templates/web/d_control.tt2 \
	templates/web/d_editfile.tt2 \
	templates/web/d_install_shared.tt2 \
	templates/web/d_properties.tt2 \
	templates/web/d_read.tt2 \
	templates/web/dump_scenario.tt2 \
	templates/web/dumpvars.tt2 \
	templates/web/d_upload.tt2 \
	templates/web/edit_attributes.tt2 \
	templates/web/edit_config.tt2 \
	templates/web/editfile.tt2 \
	templates/web/edit_list_request.tt2 \
	templates/web/oauth_check.tt2 \
	templates/web/oauth_authorize.tt2 \
	templates/web/editsubscriber.tt2 \
	templates/web/edit_template.tt2 \
	templates/web/error.tt2 \
	templates/web/family_signoff.tt2 \
	templates/web/family_signoff_request.tt2 \
	templates/web/footer.tt2 \
	templates/web/get_closed_lists.tt2 \
	templates/web/get_inactive_lists.tt2 \
	templates/web/get_latest_lists.tt2 \
	templates/web/get_biggest_lists.tt2 \
	templates/web/get_pending_lists.tt2 \
	templates/web/help_admin.tt2 \
	templates/web/help_arc.tt2 \
	templates/web/help_editfile.tt2 \
	templates/web/help_editlist.tt2 \
	templates/web/help_faqadmin.tt2 \
	templates/web/help_faquser.tt2 \
	templates/web/help_introduction.tt2 \
	templates/web/help_listconfig.tt2 \
	templates/web/help_mail_commands.tt2 \
	templates/web/help_sendmsg.tt2 \
	templates/web/help_shared.tt2 \
	templates/web/help_suspend.tt2 \
	templates/web/help.tt2 \
	templates/web/help_user_options.tt2 \
	templates/web/help_user.tt2 \
	templates/web/home.tt2 \
	templates/web/info.tt2 \
	templates/web/install_pending_list.tt2 \
	templates/web/javascript.tt2 \
	templates/web/latest_arc.tt2 \
	templates/web/latest_d_read.tt2 \
	templates/web/latest_lists.tt2 \
	templates/web/lca.tt2 \
	templates/web/list_button_footer.tt2 \
	templates/web/list_button_header.tt2 \
	templates/web/list_menu.tt2 \
	templates/web/list_panel.tt2 \
	templates/web/lists.tt2 \
	templates/web/loginbanner.tt2 \
	templates/web/login_menu.tt2 \
	templates/web/loginrequest.tt2 \
	templates/web/login.tt2 \
	templates/web/ls_templates.tt2 \
	templates/web/maintenance.tt2 \
	templates/web/main.tt2 \
	templates/web/manage_template.tt2 \
	templates/web/menu.tt2 \
	templates/web/menu_search.tt2 \
	templates/web/modindex.tt2 \
	templates/web/modform.tt2 \
	templates/web/nav.tt2 \
	templates/web/news.tt2 \
	templates/web/notice.tt2 \
	templates/web/picture_upload.tt2 \
	templates/web/pref.tt2 \
	templates/web/remove_arc.tt2 \
	templates/web/rename_list_request.tt2 \
	templates/web/renewpasswd.tt2 \
	templates/web/requestpasswd.tt2 \
	templates/web/request_topic.tt2 \
	templates/web/reviewbouncing.tt2 \
	templates/web/review_family.tt2 \
	templates/web/review.tt2 \
	templates/web/rss_request.tt2 \
	templates/web/rss.tt2 \
	templates/web/scenario_test.tt2 \
	templates/web/search_user.tt2 \
	templates/web/serveradmin.tt2 \
	templates/web/setlang.tt2 \
	templates/web/set_pending_list_request.tt2 \
	templates/web/show_cert.tt2 \
	templates/web/show_exclude.tt2 \
	templates/web/show_sessions.tt2 \
	templates/web/sigindex.tt2 \
	templates/web/sigrequest.tt2 \
	templates/web/skinsedit.tt2 \
	templates/web/sso_login.tt2 \
	templates/web/stats.tt2 \
	templates/web/subindex.tt2 \
	templates/web/suboptions.tt2 \
	templates/web/subrequest.tt2 \
	templates/web/subscriber_table.tt2 \
	templates/web/suspend_request.tt2 \
	templates/web/ticket.tt2 \
	templates/web/title.tt2 \
	templates/web/tracking.tt2 \
	templates/web/tt2_error.tt2 \
	templates/web/viewbounce.tt2 \
	templates/web/viewlogs.tt2 \
	templates/web/viewspools.tt2 \
	templates/web/viewspool_message.tt2 \
	templates/web/viewspool_message_dump.tt2 \
	templates/web/viewspool_message_remove.tt2 \
	templates/web/viewspool_message_mv.tt2 \
	templates/web/viewmod.tt2 \
	templates/web/view_template.tt2 \
	templates/web/your_lists.tt2 \
	templates/web/ja_JP/css.tt2 \
	templates/web/ko_KR/css.tt2 \
	templates/web/zh_CN/css.tt2 \
	templates/web/zh_TW/css.tt2

# TODO: merge with previous list once installation directory (mail_tt2)
# matches archive directory (templates/mail)
nobase_mailtemplate_DATA = \
	templates/mail/authorization_reject.tt2 \
	templates/mail/bye.tt2 \
	templates/mail/certif_warning.tt2 \
	templates/mail/command_report.tt2 \
	templates/mail/digest_plain.tt2 \
	templates/mail/digest.tt2 \
	templates/mail/dsn.tt2 \
	templates/mail/d_install_shared.tt2 \
	templates/mail/d_reject_shared.tt2 \
	templates/mail/expire_deletion.tt2 \
	templates/mail/expire_warning1.tt2 \
	templates/mail/expire_warning2.tt2 \
	templates/mail/get_archive.tt2 \
	templates/mail/global_remind.tt2 \
	templates/mail/helpfile.tt2 \
	templates/mail/index_archive.tt2 \
	templates/mail/info_report.tt2 \
	templates/mail/invite.tt2 \
	templates/mail/list_created.tt2 \
	templates/mail/listeditor_notification.tt2 \
	templates/mail/listmaster_notification.tt2 \
	templates/mail/listmaster_groupednotifications.tt2 \
	templates/mail/listowner_notification.tt2 \
	templates/mail/list_rejected.tt2 \
	templates/mail/lists.tt2 \
	templates/mail/message_report.tt2 \
	templates/mail/moderate.tt2 \
	templates/mail/modindex.tt2 \
	templates/mail/reject.tt2 \
	templates/mail/remind.tt2 \
	templates/mail/removed.tt2 \
	templates/mail/request_auth.tt2 \
	templates/mail/review.tt2 \
	templates/mail/send_auth.tt2 \
	templates/mail/sendpasswd.tt2 \
	templates/mail/sendssopasswd.tt2 \
	templates/mail/stats_report.tt2 \
	templates/mail/summary.tt2 \
	templates/mail/urlized_part.tt2 \
	templates/mail/user_notification.tt2 \
	templates/mail/welcome.tt2 \
	templates/mail/which.tt2 \
	templates/mail/x509-user-cert-missing.tt2 \
	templates/mail/your_infected_msg.tt2

EXTRA_DIST = $(nobase_default_DATA) \
	     $(nobase_webtemplate_DATA) \
	     $(nobase_mailtemplate_DATA) \
	     list_aliases.tt2.in

CLEANFILES = list_aliases.tt2

DEFAULT_SCENARIOS = add.owner \
		    d_edit.owner \
		    d_read.private \
		    del.owner \
		    info.open \
		    invite.private \
		    remind.owner \
		    review.owner \
		    send.private \
		    subscribe.open \
		    topics_visibility.noconceal \
		    tracking.owner \
		    unsubscribe.open \
		    visibility.conceal

list_aliases.tt2: Makefile list_aliases.tt2.in
	rm -f $@
	$(AM_V_GEN)$(SED) \
		-e 's|--libexecdir--|$(libexecdir)|' \
		< $(srcdir)/$@.in > $@

install-data-hook:
	cd  $(DESTDIR)$(defaultdir)/scenari; \
	for file in $(DEFAULT_SCENARIOS); do \
		$(LN_S) -f $$file `echo $$file | $(SED) -e 's/\.[^.]*$$/.default/'`; \
	done
	cd $(DESTDIR)$(webtemplatedir); \
	$(LN_S) -f review.tt2 search.tt2; \
	$(LN_S) -f lists.tt2 which.tt2; \
	$(LN_S) -f lists.tt2 search_list.tt2 \
	rm -f authorization_reject.tt2; \
	$(LN_S) -f ../mail_tt2/authorization_reject.tt2
